--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "~4.16.0",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
+    "method-override": "^2.3.10",
     "mongoose": "^5.1.3",
     "morgan": "~1.9.0"
   }
